---
source: compiler-core/src/javascript/tests/todo.rs
assertion_line: 38
expression: "\nfn go() {\n  todo(\"I should do this\")\n}\n"
---
import { makeError } from "../gleam.mjs";

function go() {
  throw makeError("todo", "my/mod", 3, "go", "I should do this", {})
}

